Fix footer covering content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,9 @@ body {
     min-height: 100vh;
     overflow-x: hidden;
     font-family: 'Noto Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 50px;
 }
 
 /* Navbar */
@@ -44,6 +47,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 50px;
 }
 
 footer a {
